# strider

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: COVERAGE_BADGE.md  DYNAMIC_BADGES.md  LICENSE_ANALYSIS.md
docs/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
docs/plans/: DEVELOPMENT_PLAN.md
examples/: CMakeLists.txt  cpu_info.c
include/strider/: config.h
include/strider/parsers/: newline.h  strchr.h
include/strider/simd/: vector.h
include/strider/utils/: memory.h
scripts/: format-code.sh
src/: config.c
src/parsers/: newline.c  strchr.c
tests/: CMakeLists.txt  test_build.c  test_memory_utils.c  test_newline.c  test_simd_detection.c  test_strchr.c  test_vector_compare.c  test_vector_ops.c
tests/unity/: unity.c  unity.h
